--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.21.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-js-pagination": "^3.0.3",
     "react-query": "^3.13.9",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.1"
